feat: added meta tags for seo and replaced icons.

--- a/index.html
+++ b/index.html
@@ -2,9 +2,35 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
+    <title>PKPASS Viewer - Open Apple Wallet Pass Online</title>
+    <meta
+      name="description"
+      content="Open and preview Apple Wallet .pkpass files online. Free, fast, private PKPASS viewer that runs entirely in your browser."
+    />
+    <meta
+      name="keywords"
+      content="pkpass viewer, apple wallet pass viewer, open pkpass online, wallet pass preview"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>pkpass-viewer</title>
+    <meta property="og:title" content="PKPASS Viewer" />
+    <meta
+      property="og:description"
+      content="Preview Apple Wallet passes online. No upload, no tracking."
+    />
+    <meta property="og:type" content="website" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "WebApplication",
+        "name": "PKPASS Viewer",
+        "applicationCategory": "Utility",
+        "operatingSystem": "Any",
+        "description": "Open and preview Apple Wallet PKPASS files online.",
+        "browserRequirements": "Requires JavaScript"
+      }
+    </script>
   </head>
   <body>
     <div id="root"></div>
