feat: add googel site verification meta tag

--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
     />
     <meta property="og:type" content="website" />
     <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="google-site-verification"
+      content="ucAo3gpUn4RSFeYsNWzk_iJdH2LOLY_aiPr1po13PSQ"
+    />
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
